--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,3 @@
-#denyGreg {
-  display: none;
-  color: green;
-}
-
-#yesPlease, #noThankYou {
-  margin-bottom: 10px;
-  background-color: green;
-}
-
-#noThankYou {
-  margin-bottom: 10px;
-  background-color: green;
-}
-
-#giveName, #noName {
-  margin-bottom: 10px;
-  background-color: green;
-}
-
-.nameBox {
-  margin-top: 10px;
-  display: none;
-  color: green;
-}
-
-#anonymous {
-  display: none;
-  color: green;
-}
-
-#inputName {
-  display: none;
-}
-
 .box1 {
   width: 98%;
   border: solid black;
@@ -42,7 +7,78 @@
 }
 
 .box1 h2 {
-  padding-left: 8%;
+text-align: center;
+}
+
+#denyGreg {
+  display: none;
+  color: green;
+}
+
+#yesPlease, #noThankYou {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: green;
+}
+
+#name {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: green;
+}
+
+#noName {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: green;
+}
+
+#devDialog {
+  display: none;
+}
+
+#nameBox {
+  margin-top: 10px;
+  display: none;
+  color: green;
+}
+
+#questions h2 {
+  color: green;
+}
+
+#setName {
+  display: none;
+}
+
+#continueOne {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: green;
+}
+
+#bDay {
+  display: none;
+}
+
+#bDay h2 {
+  color: green;
+}
+
+#continueTwo {
+  background-color: green;
+}
+
+#beginQuiz {
+  display: none;
+}
+
+#beginQuiz h2 {
+  color: green;
+}
+
+#continueThree {
+  background-color: green;
 }
 
 .container h1 {
@@ -58,4 +94,26 @@
 .container p {
   font-size: large;
   color: green;
+}
+
+#pickColor {
+  margin-left: 41%;
+  color: green;
+  margin-bottom: 30px;
+}
+
+#submit{
+  margin-left: 48%;
+}
+
+.radio {
+  color: green;
+}
+
+#suggestorForm {
+  display: none;
+}
+
+body {
+  font-family: sans-serif;
 }
